add test and validation endpoint
verinice-veo#3719